--- a/APIs/worldcountry/api/.htaccess
+++ b/APIs/worldcountry/api/.htaccess
@@ -1,6 +1,6 @@
 # Access the mod_rewrite.c module of Apache Web Server
 # Enable rewriting on for this driectory
-# RewriteEngine On
+RewriteEngine On
 
 # RewriteCond directive 
 # 
