--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "casedeploy",
   "version": "1.0.0",
-  "description": "Personal learning project",
+  "description": "Personal Projects",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/SamZ-x/CaseDeploy.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "X Zhu",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SamZ-x/CaseDeploy/issues"
